--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     background-color: #201547;
     border-color: #201547;
 }
-.custom-shape-divider-bottom-1673283284 {
+.custom-shape-divider-bottom-1673369099 {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -53,13 +53,13 @@ body {
     line-height: 0;
 }
 
-.custom-shape-divider-bottom-1673283284 svg {
+.custom-shape-divider-bottom-1673369099 svg {
     position: relative;
     display: block;
-    width: calc(172% + 1.3px);
+    width: calc(100% + 1.3px);
     height: 500px;
 }
 
-.custom-shape-divider-bottom-1673283284 .shape-fill {
-    fill: #FFF;
+.custom-shape-divider-bottom-1673369099 .shape-fill {
+    fill: #FFFFFF;
 }
