--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
     margin-top: 15px;
 }
 
-.btn-success {
+.btn {
     color: #fff;
     background-color: linear-gradient(
         rgb(240, 127, 52),
